--- a/src/ui/DropDownMenu.module.css
+++ b/src/ui/DropDownMenu.module.css
@@ -34,7 +34,7 @@
   list-style: none;
   padding: 0.5rem 0;
   margin: 0;
-  min-width: 150px;
+  max-width: 150px;
   z-index: 5;
 }
 
